<resources>
    <string name="app_name">Mountain Companion - V.1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_tutorial">Tutorial</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_tuto">TutoActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_max_distance">Distance max (kms) :</string>
    <string name="pref_radius">Radius range (kms) :</string>
    <string name="pref_location_switch">Location Enabled</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!--CHOIX STYLE DE CARTE ! -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_style_carte">Choix du style de carte</string>
    <string-array name="pref_choix_style_carte">
        <item>Carte style normal</item>
        <item>Carte style hybrid</item>
        <item>Carte style terrain</item>
        <item>Carte style satellite</item>
    </string-array>
    <string-array name="pref_choix_style_carte_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="key_choix_style_carte">key_choix_style_carte</string>


    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="key_search_radius">key_search_radius</string>
    <string name="key_max_distance">key_max_distance</string>
    <string name="key_location_switch">key_location_switch</string>


<<<<<<< Updated upstream
    <!-- A propos -->
    <string name="presentation">\n
        Version : 0.0.1\n
Iut-bm.univ-fcomte.fr\n
isabelle.marguet@univ-fcomte.fr

    </string>


    <string name="Titre_a_propos"> Mountain Companion</string>
    <string name="Texte_Google_Maps1">
        Google Maps maps.google.fr est un service gratuit de cartographie en ligne.
        Le service a été créé par Google.
        Lancé en 2004 aux États-Unis et au Canada et en 2005 en Grande-Bretagne
        (sous le nom de Google Local), Google Maps a été lancé jeudi 27 avril 2006,
        simultanément en France, Allemagne, Espagne et Italie.
    </string>

    <string name="Texte_Google_Maps2">
        C\'est un service disponible sur PC, tablette et smartphone qui permet de l\'échelle d\'un pays,
        de zoomer jusqu\'à l\'échelle d\'une rue. Des prises de vue fixes montrent les détails de certaines rues sont
        également accessibles grâce à une passerelle vers Google Street View streetviewing.fr .
    </string>

    <string name="Unsplash_title">
        Unsplash.com
    </string>

    <string name="Unsplash_text">
        Le site Unsplash.com est une banque d\'images, c\'est-à-dire une plateforme où chacun peut trouver une photo pour illustrer un projet, un article et même à des fins commerciales. Mais Unsplash est légèrement différent des autres sites du même genre.

On y trouve en effet des centaines d\'images, toutes en haute définition mais surtout entièrement gratuites et libres de droit, sous la licence Creative Commons Zero.
        Cela signifie que chaque photo peut être copiée, modifiée et partagée sans que son utilisateur ne soit inquiété par des droits d\'auteur.
        Chaque image est proposée au site par les internautes puis publiée avec le nom du photographe.
    </string>


    <string name="Wikipedia"> Wikipedia </string>

    <string name="Text_wikipedia">

        Wikipédia est un projet d\'encyclopédie universelle, multilingue, créé par Jimmy Wales et Larry Sanger
        le 15 janvier 2001 en wiki sous le nom de domaine wikipedia.org. Les versions des différentes langues
        utilisent le même logiciel de publication, MediaWiki, et ont la même apparence,
        mais elles comportent des variations dans leurs contenus, leurs structures et leurs modalités d\'édition et de gestion.
    </string>


    <string name="Membre"> Membres de l\'équipe</string>

    <string name="Equipe">\nJose Alvarado Alvarado\nJoseph Alonzo Aranda\n
Valentin Guenon\n
Isabelle Marguet\n
Soufiane Zalmad\n
Yassine Zekri\n

    </string>


=======

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">Connect the charger</string>
    <string name="desc_slide1">It will start automatically when charger is connected</string>
    <string name="title_slide2">Battery status update</string>
    <string name="desc_slide2">It will  keep you updated on battery charging status through notification and home screen widget</string>
    <string name="title_slide3">Alert on 100%</string>
    <string name="desc_slide3">It will alert you when battery reaches 100%</string>
>>>>>>> Stashed changes
</resources>
