<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:xmls="http://schemas.android.com/apk/res-auto"
    tools:context="iut_bm_lp.projet_mountaincompanion_v1.views.About_Fragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titreMountain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Titre_a_propos"
            android:textColor="#000"
            android:textSize="10pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/informations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/titreMountain"
            android:linksClickable="true"
            android:autoLink="all"
            android:textColorLink="#00F"
            android:text="@string/presentation"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_below="@+id/informations"
            android:layout_marginTop="10pt"
            android:text="Google Maps"
            android:textColor="#000"
            android:textSize="7pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_below = "@+id/textView"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/Texte_Google_Maps1"
            android:textColorLink="#00F" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10pt"
            android:layout_below="@+id/textView2"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/Texte_Google_Maps2"
            android:textColorLink="#00F" />

        <ImageView
            android:id="@+id/img_gms"
            android:layout_width="50pt"
            android:layout_height="30pt"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/gms"
            tools:ignore="InvalidId" />

        <TextView
            android:id="@+id/unsplash_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_below="@+id/img_gms"
            android:layout_marginTop="10pt"
            android:text="@string/Unsplash_title"
            android:textColor="#000"
            android:textSize="7pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/unsplash_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/unsplash_title"
            android:text="@string/Unsplash_text"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColorLink="#00F"/>

        <ImageView
            android:id="@+id/unsplash_image"
            android:layout_width="25pt"
            android:layout_height="15pt"
            android:layout_gravity="left"
            android:layout_marginLeft="50pt"
            android:src="@drawable/unsplach"
            android:layout_below="@+id/unsplash_text"
            android:layout_marginTop="10pt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Unsplash_title"
            android:gravity="left"
            android:layout_marginLeft="75pt"
            android:layout_below="@+id/unsplash_text"
            android:layout_marginTop="13pt"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/wikipedia_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Wikipedia"
            android:gravity="left"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="7pt"
            android:layout_below="@+id/unsplash_image"
            android:layout_marginTop="10pt"/>

        <TextView
            android:id="@+id/wikipedia_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:text="@string/Text_wikipedia"
            android:layout_below="@+id/wikipedia_title"
            android:layout_marginTop="0pt"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColorLink="#00F"/>

        <TextView
            android:id="@+id/Membres"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:textSize="7pt"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/Membre"
            android:layout_below="@+id/wikipedia_text"
            android:layout_marginTop="10pt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:text="@string/Equipe"
            android:layout_below="@+id/Membres"
            android:layout_marginTop="0pt"/>
    </RelativeLayout>
</ScrollView>
</FrameLayout>


